= 2.0 / ?? (future release changes, like a reminder to self)
  
  - prsnt? and absnt? are now finally banned into oblivion. Wasting vocals for
    the win. 

= 1.6 / ??

  ! A performance anomaly when parsing multibyte characters has been detected
    and fixed with the help of Zach Moazeni (@zmoazeni).

  ! A few small bug fixes and optimisations have been introduced. API should 
    remain unchanged. 
    
= 1.5 / 27Dec2012
    
  + Handles unconsumed input at end of parse completely differently. Instead
    of generating a toplevel error, it now raises an error in every branch
    of the parse. More information in the resulting exception ensues! Thanks
    again to John Mettraux for inspiration & acceptance specs. 
    
    NOTE that this means that the UnconsumedInput exception is gone, since the
    unconsumed input case is nothing special anymore. 
    
  * This history now finally reads like the Changelog of the linux kernel. 
    Meaning that probably no one ever reads this. 
    
  + Captures and parsing subsequent input based on captured values. This has
    been long overdue - finally you can parse HEREdocs with parslet!
    
= 1.4.0 / 25May2012

  + Revised documentation. A few new API features have finally made it into
    the documentation. Examples in the documentation are now curated and
    run against the current code so that they really really work. 
    Also, the website generation tools have been replaced with 2012-style
    tools. Much less pain to update now. 

  + Parslet::Source now doesn't hold a StringIO, it directly holds the 
    buffer to be parsed. The api of Source has changed a tiny bit. This change
    has been made for speed optimisation reasons.

  + :reporter argument to parse, allowing to customize error reporting within
    wide boundaries. See issue #64 for a discussion. 
    Included are two error reporters, one (default) with the existing error
    tree functionality, one reporting deepest errors as defined by the above