@@ -1,3 +1,5 @@
+today
+Gemfile.lock
 *.gem
 website/.sass-cache
 .yardoc
