@@ -1,5 +1,11 @@
 source "http://rubygems.org"
 
-gem 'rake'
-
 gemspec
+
+group :development do
+  %w(rspec flexmock rdoc sdoc 
+    guard guard-rspec guard-simple_shell 
+    rb-fsevent growl rake).
+    each { |gem_name| 
+      gem gem_name }
+end
