@@ -1,0 +1,1 @@
+{:l=>"1"@0, :o=>"+"@1, :r=>{:l=>{:l=>"2"@2, :o=>"*"@3, :r=>"2"@4}, :o=>"+"@5, :r=>"3"@6}}
