@@ -5,6 +5,10 @@
 
 = 1.6 / ??
 
+  + infix_expression permits to declare an infix expression parser (think 
+    calculator) directly. This will solve many of the problems we have 
+    more elegantly. 
+
   ! A performance anomaly when parsing multibyte characters has been detected
     and fixed with the help of Zach Moazeni (@zmoazeni).
 
